[package]
name = "kriss_matcher"
version = "0.0.1"
edition = "2024"
authors = ["Sergei Zobov <sergey@szobov.ru>"]

description = "Rust implementation of the paper 'KISS-Matcher: Fast and Robust Point Cloud Registration Revisited'"
license = "Apache-2.0"
repository = "https://github.com/szobov/kriss_matcher"
homepage = "https://github.com/szobov/kriss_matcher"
documentation = "https://github.com/szobov/kriss_matcher"

[dependencies]
ahash = "0.8.12"
bytemuck = "1.23.2"
env_logger = "0.11.5"
hora = "0.1.1"
log = "0.4.22"
nalgebra = { version = "0.33.2", features = ["bytemuck"] }

# numpy = { version = "0.22.0", features = ["nalgebra"] }
petgraph = "0.6.5"
rayon = "1.11.0"
# pyo3 = { version = "0.22.4", features = ["extension-module"] }
# pyo3-stub-gen = "0.6.0"
rstar = "0.12.2"
rustworkx-core = "0.15.1"

[dev-dependencies]
all_asserts = "2.3.1"
rand = "0.9.2"

# [lib]
# name = "kriss_matcher"
# crate-type = ["cdylib"]

[target.'cfg(target_os = "linux")'.dependencies]
# nalgebra-lapack = { version = "0.25.0"}
nalgebra-lapack = { version = "0.25.0", default-features = false, features = [
    "openblas",
] }
openblas-src = { version = "0.10.9", default-features = false, features = [
    "static",
    "system",
] }

[target.'cfg(target_os = "macos")'.dependencies]
nalgebra-lapack = { version = "0.25.0", default-features = false, features = [
    "accelerate",
] }

[target.'cfg(target_os="windows")'.build-dependencies]
vcpkg = "0.2"

[target.'cfg(target_os="windows")'.dependencies]
nalgebra-lapack = { version = "0.25.0", default-features = false, features = [
    "openblas",
] }
openblas-src = { version = "0.10.9", default-features = false, features = [
    "system",
    "static",
] }
